--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Курс - Git и Github</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Главная страница</h1>
     <p>
-
         На этой странице будет много интересного контента по Git и Github
-    </p>
-
-       На этой странице будет много интересного контента по Git и GitHub 
     </p>
     <a href="pages/about.html">
         Перейти на страницу „О курсе“
