--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Курс - Git и Github</title>
         <link href="css/styles.css" rel="stylesheet" >
     </head>
-    <body>
+    <body class="site-body">
         <h1 class="title">Главная страница</h1>
         <h1>Главная страница</h1>
         <p class="description">
