--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <link href="css/styles.css" rel="stylesheet" >
     </head>
     <body class="site-body">
-        <h1 class="title1">Главная страница</h1>
+        <header class="site-header">
+            <h1 class="title1">Главная страница</h1>
+        </header>
         <h1>Главная страница</h1>
         <main>
             <p class="description">
