--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <body class="site-body">
         <h1 class="title1">Главная страница</h1>
         <h1>Главная страница</h1>
-        <p class="description">
-            На этой странице будет много интересного контента по Git и Github
-        </p>
-        <a href="pages/about.html">
-            Перейти на страницу „О курсе“
-        </a>
+        <main>
+            <p class="description">
+                На этой странице будет много интересного контента по Git и Github
+            </p>
+            <a href="pages/about.html">
+                Перейти на страницу „О курсе“
+            </a>
+    </main>
     </body>
 </html>
