--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
         <title>Курс - Git и Github</title>
         <link href="css/styles.css" rel="stylesheet" >
     </head>
-    <body class="site-body">
-        <header class="site-header">
-            <h1 class="title1">Главная страница</h1>
-        </header>
-        <h1>Главная страница</h1>
+    <body class="site-body2">
+        <h1 class="title1">
+            Главная страница
+        </h1>
+        <p class="description">
+            Временное описание данной страницы
+        </p>    
         <main>
             <p class="description">
                 На этой странице будет много интересного контента по Git и Github
@@ -18,6 +20,6 @@
             <a href="pages/about.html">
                 Перейти на страницу „О курсе“
             </a>
-    </main>
+        </main>
     </body>
 </html>
