--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Курс - Git и Github</title>
         <link href="css/styles.css" rel="stylesheet" >
     </head>
-    <body class="site-body2">
+    <body class="site-body">
         <header class="site-header">
             <h1 class="title1">Главная страница</h1>
         </header>
