--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Курс - Git и Github</title>
         <link href="css/styles.css" rel="stylesheet" >
     </head>
-    <body class="site-body2">
-        <h1 class="title1">
+    <body class="site-body">
+        <h1 class="title">
             Главная страница
         </h1>
         <p class="description">
