feat: added an unordered list

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <link href="css/styles.css" rel="stylesheet" >
     </head>
     <body class="site-body">
-        <h1 class="title">
+        <h1 class="heading">
             Главная страница
         </h1>
+        <ul> Первый элемент списка </ul>
         <p class="description">
             Временное описание данной страницы
         </p>    
