feat: changed the text of the link to the wrong one

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 class="heading">
             Главная страница
         </h1>
-        <ul> Первый элемент списка </ul>
+        <ul class="list"> Первый элемент списка </ul>
         <p class="description">
             Временное описание данной страницы
         </p>    
