--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <ul class="list"> Первый элемент списка </ul>
         <p class="description">
             Временное описание данной страницы
-        </p>    
+        </p>   
+        <p class="description">
+            Какое-то описание данной страницы
+        </p> 
         <main>
             <p class="description">
                 На этой странице будет много интересного контента по Git и Github
